Zmiany i poprawki w klasach testowych